--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: home
 author_profile: true
 ---
-<h1>Welcome!</h1>  
+<h1 onmouseover="this.innerHTML='Welcome to Jurassic Park! <small>(John Hammond)</small>';" onmouseout="this.innerHTML='Welcome!';">
+    Welcome!
+</h1>  
 <p>I'm Simone Francesco Fornasari, a PhD student in seismology at the SeiRaM group of University of Trieste.<br>  
 The main focus of my research (so far) is the development of new tools for real-time seismic monitoring.</p>
