--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 ---
-<h1 onmouseover="this.innerHTML='Welcome to Jurassic Park! <small>(John Hammond)</small>';" onmouseout="this.innerHTML='Welcome!';">
+<h1 onmouseover="this.innerHTML='Welcome to Jurassic Park!<br><small>- John Hammond -</small>';" onmouseout="this.innerHTML='Welcome!';">
     Welcome!
 </h1>  
 <p>I'm Simone Francesco Fornasari, a PhD student in seismology at the SeiRaM group of University of Trieste.<br>  
