Updated paper situation

--- a/_pages/egu22.html
+++ b/_pages/egu22.html
@@ -147,36 +147,13 @@ layout: full
 					</ul>
 					</div>
 					<div style="float:center; padding:0%4%">
-						<u style="font-size:1em; float:center; margin:0%4%" class='fragment' data-fragment-index="1">A paper about this work is under review at BSSA</u>
+						<u style="font-size:1em; float:center; margin:0%4%" class='fragment' data-fragment-index="1">A paper about this work is <s>under review</s> published at [BSSA](https://doi.org/10.1785/0120220034)</u>
 						<b style="font-size:1.5em; float:center; margin:0%0%" class='fragment' data-fragment-index="2">Thanks for the attention and stay tuned!</b>
 					</div>
 					<aside class="notes">
 						So the model that we developed provide a new tool for seismic monitoring that is complementary to the existing ones and has useful features for real-time applications.
 						Furthermore it could be extended to virtually any ground motion parameter and to different geographical areas.[NEXT]
-						If you're interested, a paper about this method is currently under review at BSSA,[NEXT] so stay tuned and thank you for the attention.
-					</aside>
-				</section>
-				
-				
-				<section data-background-image="/assets/img/Zagreb.png" data-background-opacity=0.2 style="font-size:0.8em;" data-auto-animate data-visibility="uncounted">
-					<h2>Conclusions</h2>
-					<div style="float:left;">
-					<p style="float:left; margin:0%4%">The developed method:</p>
-					<ul style="float:left;">
-						<li>Can fill a "temporal gap" in the seismic monitoring</li>
-						<li>Has results comparable with <span style="font-size:1em;">(resampled)</span> ShakeMap</li>
-						<li>Has useful feature for real-time applications</li>
-						<li>Is extensible (parameters and areas)</li>
-					</ul>
-					</div>
-					<div style="float:center; padding:0%4%">
-						<u style="font-size:1em; float:center; margin:0%4%">A paper about this work is under review at BSSA</u>
-						<b style="font-size:1.5em; float:center; margin:0%0%">Thanks for the attention and stay tuned!</b>
-					</div>
-					<aside class="notes">
-						So the model that we developed provide a new tool for seismic monitoring that is complementary to the existing ones and has useful features for real-time applications.
-						Furthermore it could be extended to virtually any ground motion parameter and to different geographical areas.[NEXT]
-						If you're interested, a paper about this method is currently under review at BSSA,[NEXT] so stay tuned and thank you for the attention.
+						If you're interested, a paper about this method has been published at BSSA,[NEXT] so check it out and thank you for the attention.
 					</aside>
 				</section>
 	
