--- a/_pages/egu22.html
+++ b/_pages/egu22.html
@@ -147,7 +147,7 @@ layout: full
 					</ul>
 					</div>
 					<div style="float:center; padding:0%4%">
-						<u style="font-size:1em; float:center; margin:0%4%" class='fragment' data-fragment-index="1">A paper about this work is <s>under review</s> published at [BSSA](https://doi.org/10.1785/0120220034)</u>
+						<u style="font-size:1em; float:center; margin:0%4%" class='fragment' data-fragment-index="1">A paper about this work is <s>under review</s> published at <a href="https://doi.org/10.1785/0120220034">BSSA</a></u>
 						<b style="font-size:1.5em; float:center; margin:0%0%" class='fragment' data-fragment-index="2">Thanks for the attention and stay tuned!</b>
 					</div>
 					<aside class="notes">
