--- a/_pages/aug24.html
+++ b/_pages/aug24.html
@@ -28,7 +28,7 @@ layout: full
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-image="img/title_bgC.png">
+				<section data-background-image="img/aug24_title_bgC.png">
 					<h1 style="color:black; text-align: left; width: 40%;">Real-time ground shaking maps with Antelope and ML</h1>
 
 					<p>Simone Francesco Fornasari - University of Trieste</p>
@@ -63,17 +63,17 @@ layout: full
 						<p>The <a style="color: orangered;">ConvCNP</a> acts as a GMPE replacement without the need for the event location and magnitude.</p>
 						</div>
 						<div style="width: 35%; float: right;">
-							<img data-src="img/hybrid_orange.png">
+							<img data-src="img/aug24_hybrid_orange.png">
 						</div>
 					</section>
 					<section>
 						<h1>Training datasets</h1>
 						<div style="width: 70%; float: left;">
-							<img data-src="img/SRh_db.png">
+							<img data-src="img/aug24_SRh_db.png">
 							<p>INGV ShakeMap archive and DISS-based synthetic data</p>
 						</div>
 						<div style="width: 25%; float: left;">
-							<img data-src="img/AF.jpg">
+							<img data-src="img/aug24_AF.jpg">
 							<p>(Mori et al., 2021)</p>
 						</div>
 					</section>
@@ -101,36 +101,18 @@ layout: full
 				</section>
 
 				<section>
-					<section>
-						<h1>Data visualization</h1>
-						<img data-src="img/leaflet.png">
-					</section>
-					<section>
-						<h1>Live visualization</h1>
-						<iframe data-src="http://localhost:8080/plot_latest" data-preload width="1280" height="720"></iframe>
-					</section>
+					<h1>Data visualization</h1>
+					<img data-src="img/aug24_leaflet.png">
 				</section>
 
 				<section>
-					<section>
-						<h1>Past events info</h1>
-						<img data-src="img/evlist.png">
-					</section>
-					<section>
-						<h1>Live past events info</h1>
-						<iframe data-src="http://localhost:8080/get_events" data-preload width="1280" height="720" style="background-color: white;"></iframe>
-					</section>
+					<h1>Past events info</h1>
+					<img data-src="img/aug24_evlist.png">
 				</section>
 
 				<section>
-					<section>
-						<h1>Web service</h1>
-						<img data-src="img/webservice.png">
-					</section>
-					<section>
-						<h1>Live web service</h1>
-						<iframe data-src="http://localhost:8080/docs" data-preload width="1280" height="720"></iframe>
-					</section>
+					<h1>Web service</h1>
+					<img data-src="img/aug24_webservice.png">
 				</section>
 
 				<section>
@@ -144,7 +126,7 @@ layout: full
 				</section>
 
 
-				<section data-background-image="img/title_bgC.png">
+				<section data-background-image="img/aug24_title_bgC.png">
 					<h1 style="color:black; text-align: left; width: 40%;">Thanks for your attention!</h1>
 
 					<p style="color: orangered;">simonefrancesco.fornasari@phd.units.it</p>
