--- a/_pages/aug24.html
+++ b/_pages/aug24.html
@@ -18,17 +18,17 @@ layout: full
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/sansserif.css" id="theme">
+		<link rel="stylesheet" href="/assets/dist/reset.css">
+		<link rel="stylesheet" href="/assets/dist/reveal.css">
+		<link rel="stylesheet" href="/assets/dist/theme/sansserif.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<link rel="stylesheet" href="/assets/plugin/highlight/monokai.css">
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-image="img/aug24_title_bgC.png">
+				<section data-background-image="/assets/img/aug24_title_bgC.png">
 					<h1 style="color:black; text-align: left; width: 40%;">Real-time ground shaking maps with Antelope and ML</h1>
 
 					<p>Simone Francesco Fornasari - University of Trieste</p>
@@ -63,17 +63,17 @@ layout: full
 						<p>The <a style="color: orangered;">ConvCNP</a> acts as a GMPE replacement without the need for the event location and magnitude.</p>
 						</div>
 						<div style="width: 35%; float: right;">
-							<img data-src="img/aug24_hybrid_orange.png">
+							<img data-src="/assets/img/aug24_hybrid_orange.png">
 						</div>
 					</section>
 					<section>
 						<h1>Training datasets</h1>
 						<div style="width: 70%; float: left;">
-							<img data-src="img/aug24_SRh_db.png">
+							<img data-src="/assets/img/aug24_SRh_db.png">
 							<p>INGV ShakeMap archive and DISS-based synthetic data</p>
 						</div>
 						<div style="width: 25%; float: left;">
-							<img data-src="img/aug24_AF.jpg">
+							<img data-src="/assets/img/aug24_AF.jpg">
 							<p>(Mori et al., 2021)</p>
 						</div>
 					</section>
@@ -102,17 +102,17 @@ layout: full
 
 				<section>
 					<h1>Data visualization</h1>
-					<img data-src="img/aug24_leaflet.png">
+					<img data-src="/assets/img/aug24_leaflet.png">
 				</section>
 
 				<section>
 					<h1>Past events info</h1>
-					<img data-src="img/aug24_evlist.png">
+					<img data-src="/assets/img/aug24_evlist.png">
 				</section>
 
 				<section>
 					<h1>Web service</h1>
-					<img data-src="img/aug24_webservice.png">
+					<img data-src="/assets/img/aug24_webservice.png">
 				</section>
 
 				<section>
@@ -126,7 +126,7 @@ layout: full
 				</section>
 
 
-				<section data-background-image="img/aug24_title_bgC.png">
+				<section data-background-image="/assets/img/aug24_title_bgC.png">
 					<h1 style="color:black; text-align: left; width: 40%;">Thanks for your attention!</h1>
 
 					<p style="color: orangered;">simonefrancesco.fornasari@phd.units.it</p>
@@ -135,10 +135,10 @@ layout: full
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="/assets/dist/reveal.js"></script>
+		<script src="/assets/plugin/notes/notes.js"></script>
+		<script src="/assets/plugin/markdown/markdown.js"></script>
+		<script src="/assets/plugin/highlight/highlight.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
